--- a/Brainf_ck-sharp.Test/Brainf_ck-sharp.Test.csproj
+++ b/Brainf_ck-sharp.Test/Brainf_ck-sharp.Test.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MiscTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptTests.cs" />
+    <Compile Include="SyntaxTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
