--- a/Brainf_ck-sharp/Brainf_ck-sharp.csproj
+++ b/Brainf_ck-sharp/Brainf_ck-sharp.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
 
 </Project>
