--- a/Brainf_ck-sharp.Test/Brainf_ck-sharp.Test.csproj
+++ b/Brainf_ck-sharp.Test/Brainf_ck-sharp.Test.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ExceptionTests.cs" />
     <Compile Include="LoopTests.cs" />
     <Compile Include="MiscTests.cs" />
+    <Compile Include="PBrainTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptTests.cs" />
     <Compile Include="SyntaxTests.cs" />
