--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -114,11 +114,13 @@
     <Compile Include="Converters\BoolToAccentBrushOrFallbackConverter.cs" />
     <Compile Include="Converters\BoolToColorBrushConverter.cs" />
     <Compile Include="Converters\BoolToInvertedVisibilityConverter.cs" />
+    <Compile Include="Converters\ConsoleMemoryViewer\ConsoleMemoryViewerSectionMarginConverter.cs" />
     <Compile Include="Converters\ConsoleMemoryViewer\ConsoleStateInfoSectionDescriptionConverter.cs" />
     <Compile Include="Converters\DateTimeToDateStringConverter.cs" />
     <Compile Include="Converters\DisplayScalingToMarginConverter.cs" />
     <Compile Include="Converters\ConsoleMemoryViewer\ConsoleMemoryViewerSectionDisplayNameConverter.cs" />
     <Compile Include="Converters\ConsoleMemoryViewer\ConsoleMemoryViewerSectionUppercaseNameConverter.cs" />
+    <Compile Include="Converters\IDEResults\IDESectionHeaderMarginConverter.cs" />
     <Compile Include="Converters\SettingsSectionTypeToUppercaseConverter.cs" />
     <Compile Include="Converters\SourceCodeTitleScoreToDisplayStringConverter.cs" />
     <Compile Include="Converters\CharacterWithFallbackConverter.cs" />
